# AIWatchlist

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
ai_watchlist/: __init__.py  __main__.py  alerts.py  backtest.py  config.py  models.py  scoring.py  sectors.py  watchlist.py
ai_watchlist/dashboard/: __init__.py  app.py
ai_watchlist/dashboard/templates/: dashboard.html
ai_watchlist/indicators/: __init__.py  contracts.py  data_sources.py  executives.py  github.py  jobs.py  prices.py  sec.py  sentiment.py
tests/: test_watchlist.py
